LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/AC_INVOICE_OUTSTANDING_HD__x.object-meta.xml
<CustomObject>
    <description>AC_INVOICE_OUTSTANDING_HD</description>
    <externalDataSource>WCGT_Integration</externalDataSource>
    <externalName>AC_INVOICE_OUTSTANDING_HD</externalName>
    <label>AC_INVOICE_OUTSTANDING_HD</label>
    <pluralLabel>AC_INVOICE_OUTSTANDING_HD</pluralLabel>
</CustomObject>