LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/ADJ_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>ADJ_AMOUNT__c</fullName>
    <description>ADJ_AMOUNT</description>
    <externalDeveloperName>ADJ_AMOUNT</externalDeveloperName>
    <label>ADJ_AMOUNT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>