LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/ADM_AMT__c.field-meta.xml
<CustomField>
    <fullName>ADM_AMT__c</fullName>
    <description>ADM_AMT</description>
    <externalDeveloperName>ADM_AMT</externalDeveloperName>
    <label>ADM_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>