LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/COMP_CODE__c.field-meta.xml
<CustomField>
    <fullName>COMP_CODE__c</fullName>
    <description>COMP_CODE</description>
    <externalDeveloperName>COMP_CODE</externalDeveloperName>
    <label>COMP_CODE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>