LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/DATE_UP__c.field-meta.xml
<CustomField>
    <fullName>DATE_UP__c</fullName>
    <description>DATE_UP</description>
    <externalDeveloperName>DATE_UP</externalDeveloperName>
    <label>DATE_UP</label>
    <type>DateTime</type>
</CustomField>