LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/DEL_FLAG__c.field-meta.xml
<CustomField>
    <fullName>DEL_FLAG__c</fullName>
    <description>DEL_FLAG</description>
    <externalDeveloperName>DEL_FLAG</externalDeveloperName>
    <label>DEL_FLAG</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>