LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/DOC_AID__c.field-meta.xml
<CustomField>
    <fullName>DOC_AID__c</fullName>
    <description>DOC_AID</description>
    <externalDeveloperName>DOC_AID</externalDeveloperName>
    <label>DOC_AID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>