LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/DOC_MID__c.field-meta.xml
<CustomField>
    <fullName>DOC_MID__c</fullName>
    <description>DOC_MID</description>
    <externalDeveloperName>DOC_MID</externalDeveloperName>
    <label>DOC_MID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>