LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/DOC_TYPE__c.field-meta.xml
<CustomField>
    <fullName>DOC_TYPE__c</fullName>
    <description>DOC_TYPE</description>
    <externalDeveloperName>DOC_TYPE</externalDeveloperName>
    <label>DOC_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>