LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/OLD_CONTACT_ID__c.field-meta.xml
<CustomField>
    <fullName>OLD_CONTACT_ID__c</fullName>
    <description>OLD_CONTACT_ID</description>
    <externalDeveloperName>OLD_CONTACT_ID</externalDeveloperName>
    <label>OLD_CONTACT_ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>