LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/OPE_BAL_AMT__c.field-meta.xml
<CustomField>
    <fullName>OPE_BAL_AMT__c</fullName>
    <description>OPE_BAL_AMT</description>
    <externalDeveloperName>OPE_BAL_AMT</externalDeveloperName>
    <label>OPE_BAL_AMT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>