LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/PROJECT_AID__c.field-meta.xml
<CustomField>
    <fullName>PROJECT_AID__c</fullName>
    <description>PROJECT_AID</description>
    <externalDeveloperName>PROJECT_AID</externalDeveloperName>
    <label>PROJECT_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>