LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/REF_JVNO__c.field-meta.xml
<CustomField>
    <fullName>REF_JVNO__c</fullName>
    <description>REF_JVNO</description>
    <externalDeveloperName>REF_JVNO</externalDeveloperName>
    <label>REF_JVNO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>