LinKreta_POC_Repository/force-app/main/default/objects/AC_INVOICE_OUTSTANDING_HD__x/fields/REVERSAL__c.field-meta.xml
<CustomField>
    <fullName>REVERSAL__c</fullName>
    <description>REVERSAL</description>
    <externalDeveloperName>REVERSAL</externalDeveloperName>
    <label>REVERSAL</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>